#+HTML_HEAD_EXTRA: <link rel='stylesheet' type='text/css' href='css/style.css'>
#+HTML_HEAD_EXTRA: <!-- Global site tag (gtag.js) - Google Analytics -->
#+HTML_HEAD_EXTRA: <script async src="https://www.googletagmanager.com/gtag/js?id=UA-132913317-1"></script>
#+HTML_HEAD_EXTRA: <script>
#+HTML_HEAD_EXTRA:   window.dataLayer = window.dataLayer || [];
#+HTML_HEAD_EXTRA:   function gtag(){dataLayer.push(arguments);}
#+HTML_HEAD_EXTRA:   gtag('js', new Date());
#+HTML_HEAD_EXTRA:   gtag('config', 'UA-132913317-1');
#+HTML_HEAD_EXTRA: </script>

#+LINK_HOME:  https://agiuliani.xyz

#+HTML_DESCRIPTION: Personnal website
#+HTML_DESCRIPTION: chemistry, physical chemistry, spectroscopy
#+HTML_DESCRIPTION: science, chemistry, physical chemistry
#+HTML_DESCRIPTION: spectroscopy, mass spectrometry, radiation, UV, ultraviolet
#+HTML_KEYWORDS: chemistry, science, spectroscopy, interaction
#+LANGUAGE:   en
#+CATEGORY:   website

#+SUBTITLE: Spectroscopy & Spectrometry
#+HTML_DOCTYPE: html5

#+NAME: banner
#+BEGIN_EXPORT html
<div class="navbar">
  <ul>
    <li><a href='index.html'>Home</a></li>
    <li><a href='research.html'>Research</a></li>
    <li><a href='tools.html'>Tools</a></li>
    <li><a href='colleagues.html'>Colleagues</a></li>
    <li><a href='about.html'>About me</a></li>
    <li><a href='production.html'>Production</a></li>
    <li><a href='outreach.html'>Ourreach</a></li>
    <li><a href='news.html'>News</a></li>
  </ul>
</div>
#+END_EXPORT

* TODO News [fn:1]
**** *<2019-01-22 Tue>* Our last results on radiation damage study based on DNA origami from our Universität Postdam colleagues is now out in [[doi:10.1039/C8CP06813E][*PCCP*]]



* Footnotes
[fn:1]
#+BEGIN_EXPORT html
    <a class="twitter-timeline" data-height="800" data-theme="light" href="https://twitter.com/ajgiuliani?ref_src=twsrc%5Etfw">Tweets by ajgiuliani</a>
    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
#+END_EXPORT