@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2019-01-23 Mer 10:35 -->
+<!-- 2019-01-23 Mer 10:58 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Alexandre Giuliani</title>
@@ -268,12 +268,15 @@ for the JavaScript code in this tag.
   </ul>
 </div>
 
-<div id="outline-container-orgf5ed178" class="outline-2">
-<h2 id="orgf5ed178"><span class="todo TODO">TODO</span> News <sup><a id="fnr.1" class="footref" href="#fn.1">1</a></sup></h2>
-<div class="outline-text-2" id="text-orgf5ed178">
+<div id="outline-container-org33c289e" class="outline-2">
+<h2 id="org33c289e">News <sup><a id="fnr.1" class="footref" href="#fn.1">1</a></sup></h2>
+<div class="outline-text-2" id="text-org33c289e">
 </div>
 <ul class="org-ul">
-<li><a id="org984cd81"></a><b><span class="timestamp-wrapper"><span class="timestamp">&lt;2019-01-22 Mar&gt;</span></span></b> Our last results on radiation damage study based on DNA origami from our Universität Postdam colleagues is now out in <a href="https://doi.org/10.1039/C8CP06813E"><b>PCCP</b></a><br></li>
+<li><a id="org3099b86"></a><b><span class="timestamp-wrapper"><span class="timestamp">&lt;2019-01-22 Mar&gt;</span></span></b> Our last results on radiation damage study based on DNA origami from our Universität Postdam colleagues is now out in <a href="https://doi.org/10.1039/C8CP06813E"><b>PCCP</b></a><br></li>
+<li><a id="org0a736ed"></a><b><span class="timestamp-wrapper"><span class="timestamp">&lt;2019-01-23 Mer&gt;</span></span></b> Extreme UV: a means of ion activation for tandem MS appeared in <a href="https://doi.org/10.1021/acs.analchem.8b01789"><b>Anal. Chem</b></a><br></li>
+<li><a id="orgb371ee1"></a><b><span class="timestamp-wrapper"><span class="timestamp">&lt;2018-05-26 Sam&gt;</span></span></b> New paper in : how does ionization energy correlates with the antioxydant power of carotenoids ?<br></li>
+<li><a id="org9b96908"></a><b><span class="timestamp-wrapper"><span class="timestamp">&lt;2018-05-23 Mer&gt;</span></span></b> SRCD to help deciphering absolute configuration of natural products. New paper in <a href="https://doi.org/10.3390/molecules23051237"><b>Molecules</b></a><br></li>
 </ul>
 </div>
 <div id="footnotes">
@@ -287,7 +290,7 @@ for the JavaScript code in this tag.
 </div>
 </div></div>
 <div id="postamble" class="status">
-<p class="date">Created: 2019-01-23 Mer 10:35</p>
+<p class="date">Created: 2019-01-23 Mer 10:58</p>
 <p class="creator"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 26.1 (<a href="https://orgmode.org">Org</a> mode 9.2)</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
